@@ -119,13 +119,9 @@ function suki_get_current_page_setting( $key ) {
 		$settings = suki_get_theme_mod( 'page_settings_post_archive', array() );
 	}
 
-	// Other post types index page
-	elseif ( is_post_type_archive() ) {
-		$obj = get_queried_object();
-
-		if ( $obj ) {
-			$settings = suki_get_theme_mod( 'page_settings_' . $obj->name . '_archive', array() );
-		}
+	// Search page
+	elseif ( is_search() ) {
+		$settings = suki_get_theme_mod( 'page_settings_search', array() );
 	}
 		
 	// Static page
@@ -143,6 +139,15 @@ function suki_get_current_page_setting( $key ) {
 
 		if ( $obj ) {
 			$settings = wp_parse_args( get_post_meta( $obj->ID, '_suki_page_settings', true ), suki_get_theme_mod( 'page_settings_' . $obj->post_type . '_singular', array() ) );
+		}
+	}
+
+	// Other post types index page
+	elseif ( is_post_type_archive() ) {
+		$obj = get_queried_object();
+
+		if ( $obj ) {
+			$settings = suki_get_theme_mod( 'page_settings_' . $obj->name . '_archive', array() );
 		}
 	}
 		
@@ -176,11 +181,6 @@ function suki_get_current_page_setting( $key ) {
 			
 			$settings = wp_parse_args( $term_meta_settings, $post_type_archive_settings );
 		}
-	}
-
-	// Search page
-	elseif ( is_search() ) {
-		$settings = suki_get_theme_mod( 'page_settings_search', array() );
 	}
 
 	// 404 page
